@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: tcljavaInterp.test,v 1.10 2004/10/01 21:29:42 mdejong Exp $
+# RCS: @(#) $Id: tcljavaInterp.test,v 1.1 2006/02/08 23:53:47 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -139,6 +139,12 @@ test tcljavaInterp-1.7 {load context class via TclClassLoader} {
 
     test_interp_thread_context_class    
 } {OK}
+
+test javaInterp-1.8 {Use Interp.evalFile() API to source a Tcl file} {
+    catch {unset test_lengths}
+    [java::getinterp] evalFile tl.tcl
+    test_lengths
+} {1 1 1 1}
 
 
 # cleanup
